-正邪的完美视力现在会减少6.75%的伤害。

12.0.0-2022.12.1
-Added Fairy Dust and Snowflake.
-加入了妖精尘和雪花。

12.0.1-2022.12.1
-Dowsing Rods' treasure appear chance has been reduced to 40% from 75%.
-探宝棒的宝藏出现概率从75%降低到40%。
-Snowflake now will only reroll items after the item's cooldown time is over.
-雪花现在只会在道具的拾取冷却时间结束后重置道具。
-Fixed an issue that some rerolls will reroll items into devil room items after Satanic Bible used whatever current room type is.
-修复了在使用撒旦圣经之后，部分道具重置会无视当前房间道具类型将道具重置为恶魔房道具的BUG。

12.1.0-2022.12.3
-Added Spirit Cannon and Dagger of Servants.
-加入了气功炮和从者之刃。

12.1.1-2022.12.3
-Spirit Cannon and Dagger of Servants are now Quality 3.
-气功炮和从者之刃现在为品质3。
-Spirit Cannon and Dagger of Servants now have death screen icon.
-气功炮和从者之刃现在有了死亡界面图标。
-Dagger of Servants now grants +0.6 damage up instead of +1.
-从者之刃从+1伤害改为了+0.6伤害。
-The warning icon of Dagger of Servants now become smaller.
-从者之刃的警告图标现在变得更小了。

12.1.2-2022.12.4
-Added Book of Virtues wisp for Spirit Cannon.
-加入了气功炮的魂火。
-Fixed an issue that Dagger of Servants will continuously deal damage while charging Cursed Eye until player is nearly dead.
-修复了从者之刃在诅咒之眼蓄力时造成伤害，会一直造成伤害直到玩家濒死为止的BUG。

12.2.0-2022.12.4
-Added Asthma and Heart Sticker.
-加入了哮喘和红心贴纸。

12.2.1-2022.12.4
-Rebalanced Asthma's heart replace chance.
-重新平衡了哮喘的心替换概率。

12.3.0-2022.12.7
-Added Eye of Chimera.
-加入了嵌体怪之眼。

12.3.1-2022.12.7
-Fixed some issues about Eye of Chimera.
-修复了嵌体怪之眼的某些BUG。

12.3.2-2022.12.7
-Eye of Chimera now will display whether item is a familiar item.
-嵌体怪之眼现在会显示道具是不是跟班道具。

12.3.3-2022.12.7
-Seija + Pyromaniac no longer makes enemies immune to fetus bombs or rockets.
-正邪+纵火狂不再使得怪物免疫博士炸弹或导弹。
-Fixed an issue that Eika will still be teleported by Cursed Eye even when she has Black Candle.
-修复了璎花在拥有黑蜡烛时，也会被诅咒之眼传送的BUG。
-Fixed an issue that Eye of Chimera will not show chest item's information.
-修复了嵌体怪之眼不会显示宝箱中的道具信息的BUG。

12.3.4-2022.12.7
-Eye of Chimera now will show whether the item is a mod item.
-嵌体怪之眼现在会显示道具是否是MDO道具。