@@ -496,7 +496,7 @@
 
 妖精尘 Fairy Dust
 描述：飞翔的愿望 Flying Wish
-对应人物：大妖精
+人物：大妖精
 类型：被动道具
 品质：2
 标签：非游魂长子名分，非大量过牌
@@ -560,7 +560,7 @@
 
 哮喘 Asthma
 描述：魔力上升，再生力下降 Mana up, Regeneration down
-对应人物：帕秋莉·诺蕾姬
+人物：帕秋莉·诺蕾姬
 类型：被动道具
 品质：2
 标签：攻击性，可召唤，非大量过牌
@@ -853,7 +853,7 @@
 类型：主动道具
 充能：6
 品质：4
-标签：攻击性、书套
+标签：攻击性、书套、非大量过牌
 道具池：隐藏房、书房、贪婪隐藏房
 * 使用后，去除角色身上品质最低的一件道具，生成一个本房间道具池的道具。
 * 如果角色拥有美德之书，生成灰色灵火。灵火熄灭后会生成一个遗失书页2道具。
@@ -972,7 +972,7 @@
 类型：主动道具
 充能：10秒
 品质：3
-标签：攻击性、非贪婪模式
+标签：攻击性、非贪婪模式、非大量过牌
 道具池：宝箱房、商店、娃娃机
 * 持有时显示一个扇形范围。使用主动后石化范围内的所有敌人并对它们造成5点伤害，并消除所有范围内的敌弹。
     * 根据受影响的子弹和敌人数量获得分数，生成奖励。
@@ -1309,7 +1309,7 @@
 类型：主动道具
 充能：0
 品质：2
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：宝箱房、贪婪宝箱房、木箱子
 * 击杀怪物以收集其灵魂，可以收集64个灵魂。
 * 收集8个怪物的灵魂后可以使用，消耗8个灵魂并产生一个灵火。
@@ -1334,7 +1334,7 @@
 人物：水桥帕露西
 类型：被动道具
 品质：0
-标签：非贪婪模式
+标签：非贪婪模式、非大量过牌
 道具池：诅咒房，红箱子
 * 进入房间后，使该房间的所有非最终头目敌人生命值*40%。
 * 在这些敌人死亡后，召唤它们的两个小型复制，且生命值为20%。
@@ -1524,6 +1524,7 @@
 * 使用后，重置本房间内的所有道具。
 * 持有时，具有致盲诅咒。
 * 对于未知道具，可以看到它的品质、充能数和具有的标签。
+* 如果角色具有美德之书，生成发射毒眼泪的眼球魂火。
 
 天狗手机 Tengu Cellphone
 描述：搜索好宝贝！ Search for goods!
@@ -1531,7 +1532,7 @@
 类型：主动道具
 充能：2
 品质：2
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：商店，宝箱房，贪婪商店，贪婪宝箱房，娃娃机
 * 打开网上商店界面，里面会出售3样道具或基础掉落。
    * 内容根据当前房间类型而定，每个房间都不同。
@@ -1727,7 +1728,7 @@
 类型：主动道具
 充能：6
 品质：4
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：宝箱房、贪婪宝箱房、隐藏房、贪婪隐藏房、娃娃机、贪婪商店
 * 将道具重置成另一个对应的道具。
     * 被重置的道具由种子和道具品质决定，并且总是一对一。
@@ -1885,7 +1886,7 @@
 人物：宇佐见堇子
 类型：被动道具
 品质：1
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：头目房、商店、贪婪商店、贪婪头目房、娃娃机
 * +0.16弹速。
 * 掉落3个随机符文。
@@ -1906,7 +1907,7 @@
 人物：稀神探女
 类型：被动道具
 品质：0
-标签：非游魂长子名分
+标签：非游魂长子名分、非大量过牌
 道具池：诅咒房，贪婪诅咒房，红箱子
 * 获得达摩克里斯之剑，并对角色造成1颗心的伤害。
 * 达摩克里斯之剑的更新速率翻倍。
@@ -2021,7 +2022,7 @@
 类型：主动道具
 充能：8秒
 品质：3
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：宝箱房、诅咒房、红箱子、恶魔房、恶魔乞丐、究极隐藏、贪婪宝箱房、贪婪诅咒房、贪婪恶魔房（1血）
 * 使用后，召唤一个友方血骷髅。
     * 血骷髅如同普通骷髅，会向敌人扔出骨头。但骨头的伤害为80%角色伤害。
@@ -2143,7 +2144,7 @@
 类型：主动道具
 充能：2
 品质：3
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：宝箱房、贪婪宝箱房、隐藏房、贪婪隐藏房、娃娃机、贪婪商店
 * 选择赌大或者赌小，然后重置本房间内的道具。
 * 如果猜错重置出的道具ID比原先道具大还是小，该道具消失。
@@ -2156,7 +2157,7 @@
 类型：主动道具
 充能：无
 品质：2
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：商店、贪婪商店、木箱子
 * 打开8格背包，可以把你身上的道具和饰品放在里面（不再生效），或者取出。
 * 可以选择将道具或者饰品拆解成基础掉落物。
@@ -2203,7 +2204,7 @@
 人物：菅牧典
 类型：被动道具
 品质：2
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：诅咒房、恶魔房、贪婪诅咒房、贪婪恶魔房（1血）、红箱子
 * 达成某些条件后，对玩家进行帮助，并且显示一行提示。
 * 如果玩家接受帮助，之后的某个时刻会付出代价。
@@ -2214,7 +2215,7 @@
 人物：饭纲丸龙
 类型：被动道具
 品质：2
-标签：攻击性、星星、非贪婪模式
+标签：攻击性、星星、非贪婪模式、非大量过牌
 道具池：商店、隐藏房、娃娃机
 * 进入新的一层后，有几率在一个房间内掉落一颗流星，并在该房间生成一个随机星象房道具。
     * 该房间只能为普通房间或头目房，并且不能为窄房间。
@@ -2230,7 +2231,7 @@
 类型：主动道具
 充能：6
 品质：3
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：商店，贪婪商店
 * 将角色传送到交易所，内含若干交易者。
     * 再次进入后，内容会刷新，不保留任何掉落物。
@@ -2247,7 +2248,7 @@
 人物：姬虫百百世 
 类型：被动道具
 品质：4
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：恶魔房、贪婪恶魔房（2血）、究极隐藏房
 * 变为突变蜘蛛、肚脐、多指症、书包、幸运脚。
 * 如果角色是堕化以撒，容不下的道具会掉在地上。
@@ -2276,7 +2277,7 @@
 类型：主动道具
 充能：3
 品质：3
-标签：攻击性
+标签：攻击性、非大量过牌
 道具池：宝箱房、贪婪宝箱房、隐藏房、贪婪隐藏房、娃娃机、贪婪商店
 * 将本房间所有道具重置为*-1*品质的道具。
 * 每有一个被重置的道具*+1*骰子计数。
@@ -2318,7 +2319,7 @@
 
 红心贴纸 Heart Sticker
 描述：<3
-对应人物：小恶魔
+人物：小恶魔
 类型：饰品
 * 每当角色使用一张卡牌，生成一颗红心。
 
